# rpx

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build_push.yml
catalog/: gpus.toml
crates/rpx-cli/: Cargo.toml
crates/rpx-cli/src/: main.rs  ui.rs
crates/rpx-cli/src/commands/: deploy.rs  destroy.rs  list.rs  login.rs  mod.rs  proxy.rs  serve.rs  status.rs
crates/rpx-core/: Cargo.toml
crates/rpx-core/src/: config.rs  deploy.rs  lib.rs
crates/rpx-core/src/backend/: mod.rs  rvllm.rs  vllm.rs
crates/rpx-core/src/catalog/: data.rs  mod.rs
crates/rpx-core/src/fleet/: mod.rs  state.rs  store.rs
crates/rpx-core/src/gateway/: auth.rs  mod.rs  router.rs  spend.rs
crates/rpx-core/src/model/: mod.rs  sizing.rs
crates/rpx-core/src/orchestrator/: autoscaler.rs  mod.rs  model_manager.rs  queue.rs
crates/rpx-core/src/provider/: mod.rs  types.rs
crates/rpx-core/src/provider/runpod/: api.rs  invoke.rs  mod.rs
crates/rpx-core/src/proxy/: mod.rs  streaming.rs  translator.rs
crates/rpx-core/tests/: fleet_integration.rs  orchestrator_integration.rs  real_model.rs
deploy/cloud-run/: rpx.yaml
docs/: architecture.md
